# war3

./: CHANGELOG.md  README.md  pyproject.toml  quick_start.py  requirements.txt  start_y3_editor.py  sync_to_github.py
config/: config.yaml
docs/: README.md  使用指南.md  团队协作与文档维护建议.md  地图开发指南.md  新成员入门指引.md
docs/教学文档/: 10_Y3编辑器简介.md  11_环境准备与安装.md  12_新建地图项目.md  13_地形与单位编辑.md  14_物编数据管理.md  15_触发器与脚本入门.md  16_地图测试与调试.md  17_进阶功能与插件.md  18_常见问题与资源.md
docs/附录/: FAQ.md  快捷键.md  术语表.md
docs/项目管理/: 00_前言与目标.md  01_市场调研.md  02_需求分析.md  03_项目计划.md  04_开发规范.md  05_版本管理与发布.md
maps/ProjectName001_1/: game_shortcut.json  header.project  project_info.json  setting.json
maps/ProjectName001_1/archive/: archive_storage.json
maps/ProjectName001_1/custom/: collection_folder_info.py  custom_editor_model_preview_icon.py
maps/ProjectName001_1/custom/CustomImportRepo.local/: resource.repository
maps/ProjectName001_1/custom/folder_info/: custom_effect_folder_info.py  custom_icon_folder_info.py  custom_model_folder_info.py  custom_res_icon_folder_info.py  custom_res_model_folder_info.py  custom_resource_folder_info.py
maps/ProjectName001_1/editor_table/: resicon.json
maps/ProjectName001_1/editor_table/editoreffect/: 134229742.json
maps/ProjectName001_1/editor_table/editoricon/: 134219387.json  134220633.json  134220880.json  134223436.json  134227318.json  134232150.json  134232600.json  134235194.json  134236079.json  134236775.json  134236849.json  134239356.json  134239465.json  134239675.json  134239941.json  134240342.json  134242500.json  134244205.json  134245942.json  134250367.json  134250640.json  134252927.json  134257622.json  134261924.json  134275829.json  134277150.json  134278403.json  134278782.json
maps/ProjectName001_1/editor_table/editormodel/: 103883.json  134218935.json  134220270.json  134220884.json  134221380.json  134222809.json  134223078.json  134226403.json  (+57 more)
maps/ProjectName001_1/global_script/: global_main.lua
scripts/: create_project_template.py
src/: main.py
src/shared/utils/: config_loader.py  logger.py
tools/: map_manager.py  quick_import.py
(+851 files in other folders)
